[package]
name = "generational-arena-tree"
authors = ["Antikyth"]
version = "0.0.0-dev.3"
description = "Trees based on indexes to a generational arena."
license = "MPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["unified", "split", "deque"]

unified = []
split = []
deque = []

[dependencies]
generational-arena = "0.2.9"
thiserror = "1.0.50"

cfg_attrs = "3"
